--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cripto Coins</title>
   </head>
-  <body class="min-h-screen bg-backG">
+  <body class="min-h-screen bg-backG/70">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
